style.css
:root {
    --bg-color: #ffffff;
    --text-color: #000000;
    --accent-color: #e0245e;
    --link-hover-text: #ffffff;
}

@media (prefers-color-scheme: dark) {
    :root {
        --bg-color: #0b1021;
        --text-color: #fffdd0;
    }
}

body {
    margin: 0;
    font-family: "Avenir Next", system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, "Noto Sans", sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-size: 14px;
    background-color: var(--bg-color);
    color: var(--text-color);
    transition: background-color 0.3s ease, color 0.3s ease;
}

.container {
    max-width: 96rem;
    padding: 2rem;
    color: var(--text-color);
}

p,
h1 {
    margin: 0;
}

.hero-title {
    font-weight: 900;
    font-size: 2.45rem;
    margin-top: 3rem;
    line-height: 1.6;
}

.hero-description {
    margin-top: 1.5rem;
    max-width: 450px;
    line-height: 1.4;
    font-size: 1.25rem;
}

.social-nav {
    margin-top: 3rem;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 1rem;
}

.social-link {
    font-weight: 900;
    text-transform: uppercase;
    padding-top: 0.12em;
    color: var(--text-color);
    font-size: 1.75rem;
    position: relative;
    text-decoration: none;
    transition: color 0.2s ease;
}

@keyframes link-underline-anim {
    0% {
        transform: scaleX(0);
    }

    100% {
        transform: scaleX(1);
    }
}

.social-link::after {
    position: absolute;
    background-color: var(--accent-color);
    height: 0.4em;
    content: "";
    width: 100%;
    left: 0;
    bottom: 0.2em;
    z-index: -1;
    box-sizing: border-box;
    transform: scaleX(0);
    transform-origin: left;
    animation: link-underline-anim 0.4s ease-out forwards;
}

.social-link:nth-child(1)::after {
    animation-delay: 0.1s;
}

.social-link:nth-child(2)::after {
    animation-delay: 0.2s;
}

.social-link:nth-child(3)::after {
    animation-delay: 0.3s;
}

.social-link:hover {
    background-color: var(--accent-color);
    color: var(--link-hover-text);
}

@media (min-width: 350px) {
    .hero-title {
        font-size: 2.95rem;
    }
}

@media (min-width: 35em) {
    .hero-title {
        font-size: 3.35rem;
    }

    .hero-description {
        font-size: 1.35rem;
    }

    .social-link {
        font-size: 1.8rem;
    }
}

